--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,3 +19,7 @@
 @import './blocks/form__checkout';
 @import './blocks/commodity';
 @import './blocks/description';
+@import './blocks/catalog';
+@import './blocks/parameter';
+@import './blocks/filter';
+@import './blocks/grid';
