--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,6 +18,7 @@
 @import './blocks/form__cart';
 @import './blocks/form__checkout';
 @import './blocks/commodity';
+@import './blocks/carousel';
 @import './blocks/description';
 @import './blocks/catalog';
 @import './blocks/parameter';
