--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -22,6 +22,10 @@ body {
     clip: rect(0 0 0 0);
 }
 
+input::placeholder {
+    color: $bright-grey-color;
+}
+
 @media (max-width: 1600px) {
     .container {
         width: 96%;
