--- a/scss/blocks/_catalog.scss
+++ b/scss/blocks/_catalog.scss
@@ -5,7 +5,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 60px;
+
+    @include mobile {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
 
     &__title {
         @include font(24px, 29px, 400);
@@ -13,6 +17,10 @@
         color: $dark-pink-color;
         text-transform: uppercase;
         padding-top: 59px;
+
+        @include mobile {
+            text-align: center;
+        }
     }
 
     &__menu {
