--- a/scss/blocks/_form__cart.scss
+++ b/scss/blocks/_form__cart.scss
@@ -23,9 +23,8 @@
     }
 
     &-field {
-        width: 22%;
+        width: 359px;
         height: 45px;
-        padding: 12px 277px 16px 17px;
         margin-bottom: 21px;
     }
 
