--- a/scss/blocks/_loyalty.scss
+++ b/scss/blocks/_loyalty.scss
@@ -1,6 +1,11 @@
 .loyalty {
+    width: 40%;
     margin-top: 64px;
     margin-bottom: 277px;
+
+    @include mobile {
+        width: 100%;
+    }
 
     &__title {
         @include font(24px, 29px, 300);
@@ -9,6 +14,10 @@
         padding-bottom: 21px;
 
         @include tablet {
+            @include font(16px, 19px, 300);
+        }
+
+        @include mobile {
             @include font(16px, 19px, 300);
         }
     }
@@ -32,6 +41,10 @@
 
 
         @include tablet {
+            @include font(16px, 19px, 300);
+        }
+
+        @include mobile {
             @include font(16px, 19px, 300);
         }
     }
